Add signup (kinda)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="imp-links">
                 <a href="#">Forget Password</a>
-                <a href="#">Sign up</a>
+               <a href="signup.html">Sign up</a>
             </div>
             <input type="submit" value="Login" class="btn">
         </form>
