--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Border Login Form | code_wars_official</title>
+    <title>Agalarweb - Giriş Yap.</title>
     <!-- Custom CSS Link -->
     <link rel="stylesheet" href="style.css">
 </head>
