--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agalarweb - Giriş Yap.</title>
+    <title>Agalarweb - Giriş Yap</title>
     <!-- Custom CSS Link -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,20 +11,20 @@
     <div class="box">
         <div class="border-line"></div>
         <form action="#">
-            <h2>Sign in</h2>
+            <h2>Giriş yap</h2>
             <div class="input-box">
                 <input type="text" required="required">
-                <span>Username</span>
+                <span>Kullanıcı Adı</span>
                 <i></i>
             </div>
             <div class="input-box">
                 <input type="password" required="required">
-                <span>Password</span>
+                <span>Şifre</span>
                 <i></i>
             </div>
             <div class="imp-links">
-                <a href="#">Forget Password</a>
-               <a href="signup.html">Sign up</a>
+                <a href="#">Şifrenizi mi unuttunuz?</a>
+               <a href="signup/signup.html">Kayıt ol</a>
             </div>
             <input type="submit" value="Login" class="btn">
         </form>
