--- a/signup/signup.html
+++ b/signup/signup.html
@@ -3,28 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Border Login Form | code_wars_official</title>
+    <title>Agalarweb - Kayıt Ol</title>
     <!-- Custom CSS Link -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="signup.css">
 </head>
 <body>
     <div class="box">
         <div class="border-line"></div>
         <form action="#">
-            <h2>Sign in</h2>
+            <h2>Kayıt Ol</h2>
             <div class="input-box">
                 <input type="text" required="required">
-                <span>Username</span>
+                <span>Kullanıcı Adı</span>
                 <i></i>
             </div>
             <div class="input-box">
                 <input type="password" required="required">
-                <span>Password</span>
+                <span>Şifre</span>
                 <i></i>
             </div>
             <div class="imp-links">
-                <a href="#">Forget Password</a>
-                <a href="#">Sign up</a>
+                <a href="#">Giriş Yap</a>
             </div>
             <input type="submit" value="Login" class="btn">
         </form>
