--- a/signup/signup.html
+++ b/signup/signup.html
@@ -23,7 +23,7 @@
                 <i></i>
             </div>
             <div class="imp-links">
-                <a href="index.html">Giriş Yap</a>
+                <a href="../index.html">Giriş Yap</a>
             </div>
             <input type="submit" value="Login" class="btn">
         </form>
